--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,7 +88,7 @@ html{
     height: auto;
     position: relative;
     overflow: hidden !important;
-    /*-webkit-overflow-scrolling: auto;*/
+    -webkit-overflow-scrolling: touch;
     body{
       height: auto;
       position: relative;
